# linear_algebra

./: .gitignore  CMakeLists.txt  README.md  main.cpp  static_analysis_code.py
linearLib/: CMakeLists.txt
linearLib/detail/: setup_maths.hpp  setup_structs.hpp  setup_vec.hpp  types_d.hpp
linearLib/iterator/include/: iterator_cvec.hpp  iterator_vec.hpp
linearLib/iterator/src/: iterator_cvec.inl  iterator_vec.inl
linearLib/math/: math.cpp
linearLib/math/include/: math.hpp
linearLib/math/src/: math.inl
linearLib/matrix/include/: mat.hpp  mat2x2.hpp  mat3x3.hpp  mat4x4.hpp  setup_mat.hpp  types_mat.hpp
linearLib/matrix/src/: mat.inl  mat2x2.inl  mat3x3.inl  mat4x4.inl
linearLib/vector/include/: setup.hpp  setup_vec.hpp  types.hpp  types_vec.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
linearLib/vector/src/: vec.inl  vec2.inl  vec3.cpp  vec3.inl  vec4.inl
test/: CMakeLists.txt  fixture_mat.cpp  fixture_vec.cpp  main_bench.cpp  main_test.cpp  mat_test.cpp  vec_test.cpp
